--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React JS Blog</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/js/all.min.js"
-      integrity="sha512-/Hn7mYbBR5AzOJSNR6p80QQDXFIPFKTLMak6/LyKqyCuFQU3zHqZphy8kNKwWS4BA1sDbuZ0VN/IEn3xvinJVw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin="anonymous"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js" crossorigin="anonymous"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <title>React Redux</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.1/js/all.min.js"
+    integrity="sha512-/Hn7mYbBR5AzOJSNR6p80QQDXFIPFKTLMak6/LyKqyCuFQU3zHqZphy8kNKwWS4BA1sDbuZ0VN/IEn3xvinJVw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin="anonymous"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+    crossorigin="anonymous"></script>
+  <script async src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
